# projeto_controle_de_acesso

./: .gitignore  README.md
backend/: db.sqlite3  pyproject.toml
backend/accounts/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_role_and_more.py  0003_remove_user_username.py
backend/api/: urls.py  views.py
backend/config/: asgi.py  settings.py  urls.py
backend/configuracoes/: models.py  serializers.py  urls.py  views.py
backend/configuracoes/migrations/: 0001_initial.py
backend/dashboard/: consumers.py  jwt_middleware.py  routing.py  serializers.py  signals.py  urls.py  views.py
backend/meals/: models.py  serializers.py  urls.py  views.py
backend/meals/migrations/: 0001_initial.py  0002_alter_almoco_metodo.py  0003_almoco_observacao.py
backend/ocorrencias/: models.py  serializers.py  urls.py  views.py
backend/ocorrencias/migrations/: 0001_initial.py
backend/reports/: models.py  serializers.py  urls.py  views.py
backend/reports/migrations/: 0001_initial.py  0002_alter_periodovalidado_observacao.py
backend/students/: admin.py  models.py  serializers.py  urls.py  views.py
backend/students/migrations/: 0001_initial.py  0002_digital.py
docs/: Descrição Projeto (Objetivos e Requisitos Funcionais e Não Funcionais).docx  Sprints.docx  TECHNICAL_DECISIONS.md
frontend/: eslint.config.js  package-lock.json  package.json  simulador.html
frontend/src/: App.tsx  index.css  main.tsx  router.tsx
frontend/src/components/: Navbar.tsx  (+1 more)
(+22 files in other folders)
