[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Daltro-Oliveira-Vinuto <daltroov777@gmail.com>"]

package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0"
djangorestframework = "^3.17.1"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"





